--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -55,6 +55,6 @@
 <div id="side-projects">
 	<a href="/side-projects" class="menu-item left">side-projects</a>
 	<a href="//behance.net/guestandguest" target="_blank"><img data-target="//behance.net/guestandguest" src="assets/images/behance-logo.svg"/></a>
-	<a href="//codepen.io/guestn/pens/public/" target="_blank"><img data-target="//codepen.io/guestn/pens/public/" src="assets/images/codepen-logo.svg"/></a>
+	<a href="//codepen.io/guestn/pens/public/" target="_blank"><img data-target="//codepen.io/guestn/" src="assets/images/codepen-logo.svg"/></a>
 
 </div>
