--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -66,6 +66,10 @@
 	    <span></span>
 	    <span></span>
 	  </button>
+	  
+	  <a href="/" class="site-link">
+			<img src="assets/images/gg_image_logo_white.svg" alt="guest+guest logo"/>
+		</a>
 	
 	</div>
 
