--- a/_css/offscript.scss
+++ b/_css/offscript.scss
@@ -27,6 +27,8 @@ body.active-offscript {
     h1 {
 	    display: inline-block;
 	    top: 0;
+	    left:0;
+	    width:auto;
 	    margin-top: 0.5em;
 			color: white;
 			background: -webkit-linear-gradient(transparent, transparent),-webkit-linear-gradient(0deg, white 0%, rgba(255,255,255,0.5) 100%);
@@ -45,6 +47,7 @@ body.active-offscript {
 			display: inline-block;
 			float: right;
 			padding: 20px;
+			width: 100px;
 		}
 	}
 }
@@ -92,7 +95,7 @@ section {
     padding: 50% 0;
     background-size: cover;
     background-position: center center;
-    box-shadow: 0 5px 15px rgba(50,50,50,0.1);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     transform-origin: 50% 100%;
     transition: transform 0.5s ease-out;
   }
