--- a/assets/styles.css
+++ b/assets/styles.css
@@ -128,6 +128,13 @@ p.white {
     -webkit-transform: skewX(30deg);
     transform: skewX(30deg); }
 
+.site-link {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  z-index: 50;
+  width: 64px; }
+
 body.loaded #progressScreen {
   opacity: 0;
   visibility: hidden;
@@ -139,10 +146,20 @@ body.loaded h1 {
   -webkit-transition: opacity 2s linear 3s;
   transition: opacity 2s linear 3s; }
 
+body.loaded .site-link {
+  opacity: 1;
+  -webkit-transition: opacity 2s linear 1s;
+  transition: opacity 2s linear 1s; }
+
 body.menu-active h1 {
   opacity: 0;
   -webkit-transition: opacity 0.5s linear;
   transition: opacity 0.5s linear; }
+
+body.menu-active .site-link {
+  opacity: 0;
+  -webkit-transition: opacity 0.5s linear 1s;
+  transition: opacity 0.5s linear 1s; }
 
 .content-container {
   position: absolute;
@@ -246,8 +263,8 @@ p a {
 
 .nav-menu {
   position: absolute;
-  right: 8%;
-  bottom: 12%;
+  right: 0%;
+  bottom: 0%;
   font-size: 2.25em;
   text-transform: uppercase;
   text-align: right;
@@ -255,33 +272,41 @@ p a {
   transform-style: preserve-3d;
   -webkit-perspective: 700px;
   perspective: 700px;
+  -webkit-perspective-origin: 50% 20%;
+  perspective-origin: 50% 20%;
   width: auto;
   display: inline-block;
   opacity: 0;
   -webkit-transition: all 1.5s linear 0.5s;
-  transition: all 1.5s linear 0.5s; }
+  transition: all 1.5s linear 0.5s;
+  z-index: 400; }
   .nav-menu a {
     display: block;
     color: white;
     line-height: 0.8;
     -webkit-transform-origin: 100% 50%;
     transform-origin: 100% 50%;
-    -webkit-transform: rotateY(-30deg) translateZ(200px);
-    transform: rotateY(-30deg) translateZ(200px); }
+    -webkit-transform: rotateY(-10deg) translateZ(0px);
+    transform: rotateY(-10deg) translateZ(0px); }
     .nav-menu a:nth-child(2) {
       opacity: 0.8; }
     .nav-menu a:nth-child(3) {
       opacity: 0.6; }
-  @media (max-width: 640px) {
+  @media (max-height: 600px) {
     .nav-menu {
-      right: -2.5em;
-      bottom: 12%;
-      font-size: 1.0em;
+      font-size: 1.65em; } }
+  @media (max-width: 640px) and (max-height: 660px) {
+    .nav-menu {
+      right: 0em;
+      bottom: 0%;
+      font-size: 1.25em;
       max-width: calc(100% - 80px); }
       .nav-menu a {
-        line-height: 1;
-        -webkit-transform: rotateY(-30deg) translateZ(200px);
-        transform: rotateY(-30deg) translateZ(200px); } }
+        line-height: 1; } }
+
+@-moz-document url-prefix() {
+  .nav-menu {
+    transform-style: flat; } }
 
 .menu-item {
   color: white; }
@@ -537,20 +562,20 @@ p a {
     box-shadow: 0 100px 100px -30px black;
     cursor: pointer; }
     #portfolio figure:nth-child(1) {
-      -webkit-transform: rotateY(4deg) skewY(-14deg);
-      transform: rotateY(4deg) skewY(-14deg); }
+      -webkit-transform: rotateY(0deg) skewY(-9deg);
+      transform: rotateY(0deg) skewY(-9deg); }
     #portfolio figure:nth-child(2) {
-      -webkit-transform: rotateY(-22deg) skewY(0deg);
-      transform: rotateY(-22deg) skewY(0deg); }
+      -webkit-transform: rotateY(-4deg) skewY(-2deg);
+      transform: rotateY(-4deg) skewY(-2deg); }
     #portfolio figure:nth-child(3) {
-      -webkit-transform: rotateY(-14deg) skewY(-11deg);
-      transform: rotateY(-14deg) skewY(-11deg); }
+      -webkit-transform: rotateY(-5deg) skewY(-4deg);
+      transform: rotateY(-5deg) skewY(-4deg); }
     #portfolio figure:nth-child(4) {
-      -webkit-transform: rotateY(-21deg) skewY(-13deg);
-      transform: rotateY(-21deg) skewY(-13deg); }
+      -webkit-transform: rotateY(-15deg) skewY(-10deg);
+      transform: rotateY(-15deg) skewY(-10deg); }
     #portfolio figure:nth-child(5) {
-      -webkit-transform: rotateY(-15deg) skewY(4deg);
-      transform: rotateY(-15deg) skewY(4deg); }
+      -webkit-transform: rotateY(-4deg) skewY(-8deg);
+      transform: rotateY(-4deg) skewY(-8deg); }
     #portfolio figure img {
       display: block;
       width: 100%;
@@ -783,6 +808,8 @@ body.active-offscript {
     body.active-offscript header h1 {
       display: inline-block;
       top: 0;
+      left: 0;
+      width: auto;
       margin-top: 0.5em;
       color: white;
       background: -webkit-linear-gradient(transparent, transparent), -webkit-linear-gradient(0deg, white 0%, rgba(255, 255, 255, 0.5) 100%);
@@ -800,7 +827,8 @@ body.active-offscript {
     body.active-offscript header a {
       display: inline-block;
       float: right;
-      padding: 20px; }
+      padding: 20px;
+      width: 100px; }
 
 .container {
   width: 100%;
@@ -843,7 +871,7 @@ section {
     padding: 50% 0;
     background-size: cover;
     background-position: center center;
-    box-shadow: 0 5px 15px rgba(50, 50, 50, 0.1);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     -webkit-transform-origin: 50% 100%;
     transform-origin: 50% 100%;
     -webkit-transition: -webkit-transform 0.5s ease-out;
